tags/3.4/bezantrakta/location/admin/domain.rst
.. _domain:

#####
Сайты
#####

Сайты на отдельных поддоменах ``*.bezantrakta.ru``, кроме главного воронежского сайта, работающего на основном домене ``bezantrakta.ru``.

*************
Список сайтов
*************

Текстовый поиск
===============

* по названию

Фильтры
=======

* по городу, к которому привязан сайт

Действия с выбранными сайтами
=============================

* удалить
* опубликовать или снять с публикации
* пересоздать кэш

Столбцы в таблице сайтов
========================

* **Название** сайта.

* **Псевдоним** сайта.

* **Публикация** - опубликован сайт или нет.

*****************************
Страница редактирования сайта
*****************************

* **Идентификатор** сайта - число из 3-х цифр:

  * Первые 2 цифры - *автомобильный код региона*, в котором находится город сайта.
  * Третья цифра - порядковый номер от ``0`` до ``9``.

  .. tip:: `Поиск автомобильного кода региона <https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%B4%D1%8B_%D1%81%D1%83%D0%B1%D1%8A%D0%B5%D0%BA%D1%82%D0%BE%D0%B2_%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D0%B9%D1%81%D0%BA%D0%BE%D0%B9_%D0%A4%D0%B5%D0%B4%D0%B5%D1%80%D0%B0%D1%86%D0%B8%D0%B8>`_.

* **Название** сайта.

* **Псевдоним** сайта.

  Псевдоним сайта используется как поддомен конкретного сайта (например, **bel.bezantrakta.ru**). Единственное исключение - главный воронежский сайт **bezantrakta.ru**, работающий на основном домене, имея при этом псевдоним **vrn**.

  .. note:: Сайты в каком-либо городе могут быть двух типов:

    * **Основной сайт**, представляющий город в целом (например, события какого-то организатора, взявшего этот сайт в аренду по франшизе).

      Чтобы создать основной сайт:

      * **псевдоним сайта должен совпадать с псевдонимом города**,
      * последняя цифра идентификатора сайта - ``0``.

    * **Сайт какой-либо организации** в этом городе (например, "**Воронеж (ТОБ)**").

      Чтобы создать сайт организации:

      * псевдоним сайта должен напоминать название организации,
      * последняя цифра идентификатора сайта - от ``1`` до ``9`` (по порядку создания).

* **Публикация**

  * **опубликован** - включен и работает;
  * **НЕ опубликован** - отключен ("*Сайт недоступен, проводятся технические работы*").

* **Город** - привязка сайта к городу.

Настройки сайта в JSON
======================

* ``domain`` { словарь 'ключ': 'значение' } - информация о сайте в целом:

  * ``title`` строка - название сайта в теге *title*.
  * ``description`` строка - метатег *description* для всего сайта.
  * ``keywords`` строка - метатег *keywords* для всего сайта.

* ``webmaster`` { словарь 'ключ': 'значение' } - регистрация в инструментах для вебмастеров:

  * ``yandex`` строка - `Яндекс.Вебмастер <https://webmaster.yandex.ru/sites/>`_.
  * ``google`` строка - `Google.SearchConsole <https://www.google.com/webmasters/tools/home>`_.

* ``counter`` { словарь 'ключ': 'значение' } - регистрация в счётчиках, собирающих информацию о посетителях сайта:

  * ``yandex`` строка - `Яндекс.Метрика <https://metrika.yandex.ru/list/>`_.
  * ``google`` строка - `Google.Analytics <https://analytics.google.com/analytics/web/>`_.
  * ``uptolike`` строка - `UpToLike <http://uptolike.ru/cabinet/dashboard>`_ (кнопки "*Поделиться в соцсетях*" и др.).
  * ``vkontakte`` строка - `пиксель ВКонтакте <https://vk.com/ads?act=office_help&oid=-19542789&p=%D0%A7%D0%B0%D1%81%D1%82%D1%8B%D0%B5_%D0%B2%D0%BE%D0%BF%D1%80%D0%BE%D1%81%D1%8B_%D0%BF%D0%BE_%D1%80%D0%B5%D1%82%D0%B0%D1%80%D0%B3%D0%B5%D1%82%D0%B8%D0%BD%D0%B3%D1%83>`_.
  * ``facebook`` строка - `пиксель Facebook <https://www.facebook.com/business/help/651294705016616>`_.

* ``telephone`` [ список ] - телефоны для блока 'Справки и бронирование':

  * строка - телефон в формате ``+7 (473) 210-01-02``.

* ``social`` [ список ] - учётные записи сайта в соцсетях:

  * { словарь 'ключ': 'значение' } - учётные записи в соцсетях:

    * ``title`` строка - название соцсети.
    * ``slug`` строка - псевдоним соцсети.
    * ``href`` строка - ссылка на страницу в соцсети.

* ``custom_scripts`` { словарь 'ключ': 'значение' } - сторонние js-скрипты для добавления на сайт. Ключ - человекопонятное название скрипта в латиннице (например, ``jivosite``), значение - код самого скрипта (без обрамляющих его тегов ``<script></script>``).
